feat: add btn & application & other services

--- a/packages/grid/src/components/grid.less
+++ b/packages/grid/src/components/grid.less
@@ -75,12 +75,11 @@
 .make-gutter(~'lg');
 .make-gutter(~'xl');
 
-
 .col {
   position: relative;
   max-width: 100%;
   min-height: 1px;
-  flex-grow: 1;
+  flex: 0 0 auto;
 
   &--shrink {
     flex-shrink: 1;
