--- a/packages/theme-default/src/grid.scss
+++ b/packages/theme-default/src/grid.scss
@@ -10,9 +10,6 @@
   &--wrap {
     flex-wrap: wrap;
   }
-
-  @include make-cols();
-  @include make-breakpoints-cols();
 }
 
 .col {
@@ -31,9 +28,13 @@
 @include make-gutters();
 
 .container {
-  display: flex;
+  display: block;
+  margin: auto;
 
   &--fluid {
     max-width: 100%;
   }
 }
+
+@include make-cols();
+@include make-breakpoints-cols();
