--- a/packages/theme-default/src/variables/_elevation.scss
+++ b/packages/theme-default/src/variables/_elevation.scss
@@ -1,1 +1,7 @@
-$elevation-list: ();
+$elevation-map: (
+  'xs': 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075),
+  'sm': 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1),
+  'md': 0 0.625rem 0.75rem rgba(0, 0, 0, 0.125),
+  'lg': 0 0.5rem 1rem rgba(0, 0, 0, 0.15),
+  'xl': 0 1rem 3rem rgba(0, 0, 0, 0.175),
+);
