feat: add toggleGroup and tested it

--- a/packages/theme-default/src/index.scss
+++ b/packages/theme-default/src/index.scss
@@ -1,6 +1,7 @@
 @import './btn.scss';
 @import './card.scss';
 @import './colors.scss';
+@import './elevations.scss';
 @import './grid.scss';
 @import './text-input.scss';
 // mixins
