--- a/packages/theme-default/src/btn.scss
+++ b/packages/theme-default/src/btn.scss
@@ -9,10 +9,17 @@
   outline: none;
   cursor: pointer;
   border: v.$border-size solid transparent;
-  border-radius: 4px;
+  border-radius: 2px;
   padding: $normal-padding $justify-padding;
   font-size: v.$inline-font-size;
   overflow: hidden;
+  text-decoration: none;
+  position: relative;
+  margin: 0 4px;
+  color: var(--grey-0, white);
+  &:link {
+    color: currentColor;
+  }
   &__content {
     line-height: v.$inline-line-height;
     text-overflow: ellipsis;
@@ -23,8 +30,8 @@
   }
 
   &--large {
+    font-size: v.$larger-font-size;
     padding: $large-padding $justify-padding;
-    font-size: 1.5rem;
   }
 
   &--round {
@@ -44,6 +51,24 @@
   &--link,
   &--disabled {
     box-shadow: none !important;
+  }
+
+  &--link {
+    border-radius: 0;
+    &::after {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background-color: currentColor;
+      opacity: 0;
+      transition: opacity 300ms ease;
+    }
+    &.btn--active::after {
+      opacity: 1;
+    }
   }
 
   &--tile {
