update dependencies and add new doc file

--- a/packages/theme-default/src/btn.scss
+++ b/packages/theme-default/src/btn.scss
@@ -17,6 +17,7 @@
   position: relative;
   margin: 0 4px;
   color: var(--grey-0, white);
+  background: transparent;
   &:link {
     color: currentColor;
   }
