--- a/docs/.vitepress/theme/style.scss
+++ b/docs/.vitepress/theme/style.scss
@@ -1,10 +1,20 @@
-.btn {
-  margin-bottom: 8px;
-  margin-right: 8px;
-}
+// .btn {
+//   margin-bottom: 8px;
+//   margin-right: 8px;
+// }
 
 hr {
   border: 1px solid transparent;
   border-top-color: var(--grey-3);
   margin: 1rem 0;
+}
+
+body,
+html {
+  font-size: 14px;
+}
+
+:root {
+  --c-brand: var(--primary-color);
+  --c-brand-light: var(--primary-color);
 }
