--- a/packages/theme-default/src/index.scss
+++ b/packages/theme-default/src/index.scss
@@ -1,5 +1,6 @@
 @import './btn.scss';
 @import './card.scss';
+@import './checkbox.scss';
 @import './colors.scss';
 @import './elevations.scss';
 @import './grid.scss';
