--- a/packages/theme-default/src/variables/_index.scss
+++ b/packages/theme-default/src/variables/_index.scss
@@ -3,7 +3,7 @@
 @import './elevation';
 $font-color: var(--grey-10, black);
 $border-color: var(--grey-5, grey);
-
+$default-background-color: var(--grey-8, black);
 $border-size: 1px;
 $border-radius: 2px;
 $inline-line-height: 1.5;
