--- a/packages/theme-default/src/index.scss
+++ b/packages/theme-default/src/index.scss
@@ -4,6 +4,7 @@
 @import './colors.scss';
 @import './elevations.scss';
 @import './grid.scss';
+@import './slider.scss';
 @import './text-input.scss';
 // mixins
 @import './mixins/theme';
