feat: finish carousel and textbox style

--- a/packages/theme-default/src/index.scss
+++ b/packages/theme-default/src/index.scss
@@ -1,10 +1,12 @@
 @import './btn.scss';
 @import './card.scss';
+@import './carousel.scss';
 @import './checkbox.scss';
 @import './colors.scss';
 @import './elevations.scss';
 @import './grid.scss';
 @import './slider.scss';
+@import './text-box.scss';
 @import './text-input.scss';
 // mixins
 @import './mixins/theme';
