--- a/packages/theme-default/src/grid.scss
+++ b/packages/theme-default/src/grid.scss
@@ -41,6 +41,42 @@
   &--wrap {
     flex-wrap: wrap;
   }
+
+  &--justify-content {
+    &-center {
+      justify-content: center;
+    }
+    &-start {
+      justify-content: flex-start;
+    }
+    &-end {
+      justify-content: flex-end;
+    }
+    &-space-around {
+      justify-content: space-around;
+    }
+    &-space-between {
+      justify-content: space-between;
+    }
+  }
+
+  &--align-items {
+    &-center {
+      align-items: center;
+    }
+    &-start {
+      align-items: flex-start;
+    }
+    &-end {
+      align-items: flex-end;
+    }
+    &-stretch {
+      align-items: stretch;
+    }
+    &-baseline {
+      align-items: baseline;
+    }
+  }
 }
 
 .col {
