feat: add dropdown component

--- a/packages/theme-default/src/index.scss
+++ b/packages/theme-default/src/index.scss
@@ -3,6 +3,7 @@
 @import './carousel.scss';
 @import './checkbox.scss';
 @import './colors.scss';
+@import './dropdown.scss';
 @import './elevations.scss';
 @import './grid.scss';
 @import './list.scss';
