feat: use useContext

--- a/packages/theme-default/src/index.scss
+++ b/packages/theme-default/src/index.scss
@@ -8,6 +8,7 @@
 @import './field.scss';
 @import './grid.scss';
 @import './list.scss';
+@import './message.scss';
 @import './slider.scss';
 @import './text-box.scss';
 @import './text-input.scss';
